added: user controller , user addition page and users list page

--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -27,7 +27,7 @@
                     </thead>
                     <tbody>
                     <tr th:each="appointment : ${appointments}">
-                        <td th:text="${data}"></td>
+                        <td th:text="${appointment}"></td>
                     </tr>
                     </tbody>
                 </table>
