--- a/src/main/resources/templates/doctors.html
+++ b/src/main/resources/templates/doctors.html
@@ -17,35 +17,35 @@
     <div th:insert="sidebar.html :: sidebar"></div>
     <div class="content" id="content">
         <div class="container-fluid">
-            <h2 class="mb-3 mt-3">Users</h2>
-            <a th:href="@{/user/add}" class="btn btn-primary mb-3"> Add User</a>
+            <h2 class="mb-3 mt-3">Doctors</h2>
+            <a th:href="@{/doctor/add}" class="btn btn-primary mb-3"> Add Doctor</a>
 
             <table class="table no-margin  table-bordered table-striped" >
                 <thead>
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
-                    <th>Phone Number</th>
-                    <th>Email</th>
-                    <th>Date of birth</th>
+                    <th>Address</th>
+                    <th>Availability Status</th>
+                    <th>Days Available</th>
                     <th>Created Date</th>
                     <th>Modified Date</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="user : ${users}">
-                    <td th:text="${user.getFirstname()}"></td>
-                    <td th:text="${user.getLastName()}"></td>
-                    <td th:text="${user.getPhoneNumber()}"></td>
-                    <td th:text="${user.getEmail()}"></td>
-                    <td th:text="${user.getDateOfBirth()}"></td>
-                    <td th:text="${user.getCreatedDate()}"></td>
-                    <td th:text="${user.getModifiedDate()}"></td>
-                    <td> <a th:href="@{/user/edit/{id}(id=${user.userId})}">
+                <tr th:each="doctor : ${doctors}">
+                    <td th:text="${doctor.getUser().firstname}"></td>
+                    <td th:text="${doctor.getUser().lastName}"></td>
+                    <td th:text="${doctor.address}"></td>
+                    <td th:text="${doctor.availabilityStatus}"></td>
+                    <td th:text="${doctor.days_available}"></td>
+                    <td th:text="${doctor.createdDate}"></td>
+                    <td th:text="${doctor.modifiedDate}"></td>
+                    <td> <a th:href="@{/doctor/edit/{id}(id=${doctor.doctorId})}">
                         <i style="color: black;" data-feather="edit"></i>
                     </a>
-                        <a th:href="@{/user/delete/{id}(id=${user.userId})}" onclick="return confirm('Are you sure?')">
+                        <a th:href="@{/doctor/delete/{id}(id=${doctor.doctorId})}" onclick="return confirm('Are you sure?')">
                             <i style="color: red;"  data-feather="trash-2"></i>
                         </a></td>
                 </tr>
