--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -17,35 +17,39 @@
     <div th:insert="sidebar.html :: sidebar"></div>
     <div class="content" id="content">
         <div class="container-fluid">
-            <h2 class="mb-3 mt-3">Users</h2>
-            <a th:href="@{/user/add}" class="btn btn-primary mb-3"> Add User</a>
+            <h2 class="mb-3 mt-3">Patients</h2>
+            <a th:href="@{/patient/add}" class="btn btn-primary mb-3"> Add Patient</a>
 
             <table class="table no-margin  table-bordered table-striped" >
                 <thead>
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
+                    <th>Address</th>
+                    <th>Date of birth</th>
                     <th>Phone Number</th>
                     <th>Email</th>
-                    <th>Date of birth</th>
+                    <th>Diagnosis</th>
                     <th>Created Date</th>
                     <th>Modified Date</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="user : ${users}">
-                    <td th:text="${user.getFirstname()}"></td>
-                    <td th:text="${user.getLastName()}"></td>
-                    <td th:text="${user.getPhoneNumber()}"></td>
-                    <td th:text="${user.getEmail()}"></td>
-                    <td th:text="${user.getDateOfBirth()}"></td>
-                    <td th:text="${user.getCreatedDate()}"></td>
-                    <td th:text="${user.getModifiedDate()}"></td>
-                    <td> <a th:href="@{/user/edit/{id}(id=${user.userId})}">
+                <tr th:each="patient : ${patients}">
+                    <td th:text="${patient.firstname}"></td>
+                    <td th:text="${patient.lastName}"></td>
+                    <td th:text="${patient.address}"></td>
+                    <td th:text="${patient.dateOfBirth}"></td>
+                    <td th:text="${patient.phoneNumber}"></td>
+                    <td th:text="${patient.email}"></td>
+                    <td th:text="${patient.diagnosis}"></td>
+                    <td th:text="${patient.createdDate}"></td>
+                    <td th:text="${patient.modifiedDate}"></td>
+                    <td> <a th:href="@{/patient/edit/{id}(id=${patient.patientId})}">
                         <i style="color: black;" data-feather="edit"></i>
                     </a>
-                        <a th:href="@{/user/delete/{id}(id=${user.userId})}" onclick="return confirm('Are you sure?')">
+                        <a th:href="@{/patient/delete/{id}(id=${patient.patientId})}" onclick="return confirm('Are you sure?')">
                             <i style="color: red;"  data-feather="trash-2"></i>
                         </a></td>
                 </tr>
