--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -31,13 +31,13 @@
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-link link-dark">
+                <a th:href="@{/doctors}" class="nav-link link-dark">
                     <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
                     Doctors
                 </a>
             </li>
             <li>
-                <a href="#" class="nav-link link-dark">
+                <a th:href="@{/patients}" class="nav-link link-dark">
                     <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
                     Patients
                 </a>
