--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -13,7 +13,7 @@
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">
+                <a th:href="@{/appointments}" class="nav-link active" aria-current="page">
                     <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
                     Appointments
                 </a>
