--- a/src/main/resources/templates/admissionUpdate.html
+++ b/src/main/resources/templates/admissionUpdate.html
@@ -11,6 +11,7 @@
   <script src="webjars/popper.js/1.12.9-1/umd/popper.js"></script>
   <link rel="stylesheet" type="text/css" href="/css/sidebars.css"/>
   <script src="/js/moment.min.js"></script>
+  <script src="/js/feather.min.js"></script>
 </head>
 <body>
 
@@ -134,12 +135,13 @@
 
             </div>
 
-
-            <button class="w-100 btn btn-sm btn-primary btn-lg"
+            <button class="btn btn-primary btn-lg w-auto btn-sm"
                     type="submit">
               <i data-feather="check-circle" class="data-feather mr-1"></i>
               Update Admission
             </button>
+
+
 
           </form>
         </div>
@@ -162,6 +164,10 @@
         crossorigin="anonymous"></script>
 <script>
   $('#datetimepicker').datetimepicker();
+</script>
+<script>
+  // Initialize Feather icons
+  feather.replace();
 </script>
 </body>
 </html>
