--- a/src/main/resources/templates/doctorUpdate.html
+++ b/src/main/resources/templates/doctorUpdate.html
@@ -10,6 +10,7 @@
     <!--    <script src="webjars/jquery/3.7.1/jquery.min.js"></script>-->
     <script src="webjars/popper.js/1.12.9-1/umd/popper.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/sidebars.css"/>
+    <script src="/js/feather.min.js"></script>
 </head>
 <body>
 
@@ -118,13 +119,12 @@
                             </div>
 
                         </div>
-
-
-                        <button class="w-100 btn btn-sm btn-primary btn-lg"
+                        <button class="btn btn-primary btn-lg w-auto btn-sm"
                                 type="submit">
                             <i data-feather="check-circle" class="data-feather mr-1"></i>
                             Update Doctor
                         </button>
+
 
                     </form>
                 </div>
@@ -145,6 +145,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
-
+<script>
+    // Initialize Feather icons
+    feather.replace();
+</script>
 </body>
 </html>
