--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,16 +8,21 @@
     <link rel="stylesheet"
           href="/webjars/bootstrap/5.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/css/signin.css"/>
+    <script src="/js/feather.min.js"></script>
 
 </head>
 <body class="text-center">
 
 <main class="form-signin">
+    <div>
+        <img src="/icons/building-svgrepo-com.svg" alt="Your Icon" width="50" height="50" class="me-2">
+        <span class="fs-4 mb-3"> Hospital Management System</span>
+    </div>
     <form action="#" th:action="@{/sign-in}" th:object="${signInModel}" method="post">
 <!--        <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
-        <div class="form-floating">
+
+        <div class="form-floating mt-3" >
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" th:field="*{email}">
             <label for="floatingInput">Email address</label>
         </div>
@@ -35,7 +40,10 @@
         <p class="mt-5 mb-3 text-muted">&copy; 2024</p>
     </form>
 </main>
-
+<script>
+    // Initialize Feather icons
+    feather.replace();
+</script>
 
 </body>
 </html>
