--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -4,41 +4,42 @@
 
 
 
+
     <div th:fragment = "sidebar">
     <div class="d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px; height: 100vh;">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-            <span class="fs-4">Hospital Management System</span>
+            <img src="/icons/building-svgrepo-com.svg" alt="Your Icon" width="40" height="40" class="me-2">
+            <span class="fs-6 "> Hospital Management System</span>
         </a>
         <hr>
         <ul class="nav nav-pills flex-column mb-auto">
-            <li class="nav-item">
-                <a th:href="@{/appointments}" class="nav-link active" aria-current="page">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+            <li class="nav-item" >
+                <a th:href="@{/appointments}" class="nav-link link-dark" aria-current="page">
+                    <i data-feather="calendar"></i>
                     Appointments
                 </a>
             </li>
-            <li>
+            <li class="nav-item">
                 <a th:href="@{/admissions}" class="nav-link link-dark">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+                    <i data-feather="activity"></i>
                     Admissions
                 </a>
             </li>
-            <li>
+            <li class="nav-item" >
                 <a th:href="@{/user}" class="nav-link link-dark">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+                    <i data-feather="users"></i>
                     Users
                 </a>
             </li>
             <li>
                 <a th:href="@{/doctors}" class="nav-link link-dark">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+                    <i data-feather="heart"></i>
                     Doctors
                 </a>
             </li>
             <li>
                 <a th:href="@{/patients}" class="nav-link link-dark">
-                    <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                    <i data-feather="user"></i>
                     Patients
                 </a>
             </li>
