--- a/src/main/resources/templates/doctorAdd.html
+++ b/src/main/resources/templates/doctorAdd.html
@@ -46,7 +46,7 @@
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
-                                            <input type="checkbox" class="checkboxes" id="availability" th:checked="${doctor.availabilityStatus}" />
+                                            <input type="checkbox" class="checkboxes" id="availability" th:field="${doctor.availabilityStatus}" />
                                         </div>
                                     </div>
                                 </div>
