--- a/src/main/resources/templates/doctorUpdate.html
+++ b/src/main/resources/templates/doctorUpdate.html
@@ -47,13 +47,10 @@
                                     </div>
                                     <div class="col-sm-9">
                                         <div>
-                                            <input type="checkbox" class="checkboxes" id="availability" th:checked="${doctor.availabilityStatus}" />
+                                            <input type="checkbox" class="checkboxes" id="availability" th:field="${doctor.availabilityStatus}" />
                                         </div>
                                     </div>
                                 </div>
-
-
-
 
                                 <div class="row g-3 mb-3">
                                     <div class="col-md-3 align-items-center">
