--- a/src/main/resources/templates/userAdd.html
+++ b/src/main/resources/templates/userAdd.html
@@ -107,7 +107,7 @@
                                             <input type="date" class="form-control"
                                                    id="dateOfBirth"
                                                    th:field="*{dateOfBirth}"
-                                                   required date="dd/mm/yyyy">
+                                                   required>
                                             <div class="invalid-feedback">Invalid Promotion Start Date
                                             </div>
                                         </div>
